--- a/config/sync/core.entity_form_display.node.allocation.default.yml
+++ b/config/sync/core.entity_form_display.node.allocation.default.yml
@@ -3,35 +3,26 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.allocation.body
+    - field.field.node.allocation.field_end_date
     - field.field.node.allocation.field_project
     - field.field.node.allocation.field_resource
+    - field.field.node.allocation.field_start_date
     - node.type.allocation
   module:
-    - path
-    - text
+    - datetime
 id: node.allocation.default
 targetEntityType: node
 bundle: allocation
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 31
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings: {  }
-    region: content
-  created:
-    type: datetime_timestamp
-    weight: 10
-    region: content
+  field_end_date:
+    weight: 4
     settings: {  }
     third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_project:
-    weight: 32
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
@@ -40,7 +31,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_resource:
-    weight: 33
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -48,41 +39,23 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  path:
-    type: path
-    weight: 30
-    region: content
+  field_start_date:
+    weight: 3
     settings: {  }
     third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 15
+    type: datetime_default
     region: content
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 16
-    region: content
-    third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  uid:
-    type: entity_reference_autocomplete
-    weight: 5
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    region: content
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  created: true
+  path: true
+  promote: true
+  sticky: true
+  uid: true
