--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -12,10 +12,12 @@ bundle: user
 mode: default
 content:
   account:
-    weight: -10
+    weight: 0
     region: content
+    settings: {  }
+    third_party_settings: {  }
   field_area:
-    weight: 7
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
@@ -23,10 +25,6 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  language:
-    weight: 0
-    region: content
-  timezone:
-    weight: 6
-    region: content
-hidden: {  }
+hidden:
+  language: true
+  timezone: true
